--- a/gridgen/README
+++ b/gridgen/README
@@ -2,8 +2,7 @@ gridgen
 Orthogonal Grid Generator
 Version 1.46
 
-Provides orthogonal grid generation utility `gridgen', libraries `libgridgen.a'
-and `libgridgen.so'.
+Provides orthogonal grid generation utility `gridgen'.
 
 `gridgen' is a free software. See LICENSE for details.
 
@@ -22,14 +21,10 @@ make
 
 2. Portability
 
-This code should compile an all platforms with gcc. It is known to compile 
+This code should compile on all platforms with gcc. It is known to compile 
 on Linux/gcc/i386, Cygwin/gcc/i386, Djgpp/gcc/i386, and SunOS/gcc/sparc.
 On Linux/gcc/ia64 you may need to remove the optimisation flag -O2.
 Make sure that you use GNU make.
-
-Beware that the configure script currently does not do much more than a couple
-of checks. It should be viewed rather as a prototype for the future than a
-multi-platform configuration tool.
 
 3. Documentation
 
@@ -42,27 +37,26 @@ To get familiar with it, I would suggest the following sequence:
   4. Reproduce examples
   5. Read output after running "gridgen -a" and "gridgen -h"
   6. There are a number of real-life grid examples on
-     http://www.marine.csiro.au/~sakov
+     http://code.google.com/p/gridgen-c/downloads/list
 
 4. Features.
 
 Following is a list of some particular features of `gridgen', to indicate 
 what it can do and what it can not.
 
-  1. `gridgen' generates a grid based on the domain boundary and the designated
+  1. `gridgen' generates a grid based on the domain boundary and designated
      locations of the grid corners.
   2. `gridgen' can handle simply connected regions only. If you have a region
-     with an island or re-connecting channels, you have to use masking.
+     with islands or re-connecting channels, you have to use masking.
   3. Unlike many other generators, `gridgen' allows multiple corners (rather 
-     than just 4 corners) in grid space. This gives one a great flexibility in 
-     regard to generating grids for complicated regions.
+     than just 4 corners) in grid space.
   4. Unlike many other generators, `gridgen' does not allow to specify cell 
      size explicitely. One can influence the cell density by:
 
      A. Changing positions of the corners.
 
         Compare grids for examples 1 and 2 from the package; they demonstrate
-        how the cell density may be changed via the positions of the grid 
+        how the cell density can be changed via the positions of the grid 
 	corners.
 
      B. By specifying node coordinates in grid space.
@@ -71,21 +65,20 @@ what it can do and what it can not.
         points at the file that contains node coordinates in index space scaled
         to 1x1 square. Two examples of using this technique may be seen at
 
-        http://www.marine.csiro.au/~sakov/fitzroy.pdf
+        http://docs.google.com/gb?export=download&id=F.8459b230-8260-433a-9f52-d63670ae317c
 
         (note elongated cells in the river); and
 
-	http://www.marine.csiro.au/~sakov/torres.pdf
+	http://docs.google.com/gb?export=download&id=F.22d1155f-66b7-4881-9a21-ff14f31a383d
 
         (note the elongated cells in the narrowing).
 
 	Also, see example 6.
 
-     Despite the flexibility of `gridgen', I still find it difficult or 
-     impossible at times to achieve some specific grid characteristics for
-     regions far from the boundary. This particularly refers to the alignment
-     of the grid cells in a certain (flow) direction or to obtainining the 
-     desired cell density.
+     Despite the flexibility of `gridgen', it is still difficult or impossible
+     at times to achieve some specific grid characteristics for regions far from
+     the boundary. This particularly refers to the alignment of the grid cells
+     in a certain (flow) direction or to obtainining the desired cell density.
 
   5. Because `gridgen' is based on the (exact) Schwarz-Christoffel formula,
      it performs fast and is numerically robust.
@@ -93,12 +86,10 @@ what it can do and what it can not.
   6. Beware that each boundary vertex represents a singularity in the
      Scwartz-Christoffel transform. To generate a smoother grid, for a section
      of the boundary without corners (which will become a strait line in the 
-     grid space), avoid putting big deviations from the strait angle (this may
-     result in a big deviation from orthogonality); try making sharp turns by 
-     using a few smaller turns rather than one big turn; or move the boundary 
-     polyline a away from the water. Also, try to make the angles in the 
-     boundary polyline at the location of designated corners close to the 
-     right angle.
+     grid space), try to make the polygon section smoother; using a few smaller
+     turns instead of one sharp turn; or move the boundary polyline a away from
+     the water. Try to make the angles in the boundary polyline at the location
+     of designated grid corners close to the right angle.
 
   7. To generate a grid with aspect ratio close to 1, look at the value of 
      "conformal modulus" reported in the log generated by `gridgen' with "-v"
@@ -112,9 +103,8 @@ what it can do and what it can not.
   2. `Triangle' by Jonathan Richard Shewchuk -- for Delaunay triangulation.
   3. `SCPACK' by Lloyd N. Trefethen -- for Schwarz-Christoffel transform.
   4. `DOPRI8' by E. Hairer, S.P. Norsett, G. Wanner -- for solving ODEs.
-  5. `libavl' by Brad Appleton -- for AVL binary tree code.
-  6. Shamos-Hoey algorithm implementation by softSurfer -- for testing a 
-     polyline on self-intersections.
+  5. Shamos-Hoey algorithm prototype by softSurfer -- for testing a polyline on
+     self-intersections.
 
 Please acknowledge the use of this software in publications.
 
