--- a/gridgen/CHANGELOG
+++ b/gridgen/CHANGELOG
@@ -1,3 +1,6 @@
+v. 1.47, 13 October 2010
+        -- Fixed a minor bug related to entry of "nppe" parameter -- see 
+	   http://code.google.com/p/gridgen-c/issues/detail?id=1 for details.
 v. 1.46, 18 February 2009
         -- Changed the license for compatibility with GPL. Added the file
            LICENSE.
