--- a/gridgen/CHANGELOG
+++ b/gridgen/CHANGELOG
@@ -1,3 +1,5 @@
+v. 1.48, 1 May 2012
+        -- A change in nan.h to distinguish between gcc and icc
 v. 1.47, 13 October 2010
         -- Fixed a minor bug related to entry of "nppe" parameter -- see 
 	   http://code.google.com/p/gridgen-c/issues/detail?id=1 for details.
