--- a/gridgen/CHANGELOG
+++ b/gridgen/CHANGELOG
@@ -1,3 +1,5 @@
+v. 1.49, 31 July 2013
+	-- Cosmetic changes to eliminate warnings from gcc 4.7.2
 v. 1.48, 1 May 2012
         -- A change in nan.h to distinguish between gcc and icc
 v. 1.47, 13 October 2010
