--- a/gridgen/CHANGELOG
+++ b/gridgen/CHANGELOG
@@ -1,3 +1,6 @@
+v. 1.51.1, 5 October 2015
+        -- Handled singularity in sc_prod() by adding test on absolute
+           value of the argument of clog().
 v. 1.51.0, 2 October 2015
         -- Added a new option: taking care of geographic coordinates. If there
            is entry "geographic <lon0> <lat0>" in the parameter file then the
