--- a/gridgen/CHANGELOG
+++ b/gridgen/CHANGELOG
@@ -1,3 +1,5 @@
+v. 1.51.2, 7 October 2015
+        -- A bit of clean-up in sc_z2w().
 v. 1.51.1, 5 October 2015
         -- Handled singularity in sc_prod() by adding test on absolute
            value of the argument of clog().
