--- a/gridgen/CHANGELOG
+++ b/gridgen/CHANGELOG
@@ -1,3 +1,5 @@
+v. 1.51.3, 24 November 2016
+        -- Some internal changes in hash.c.
 v. 1.51.2, 7 October 2015
         -- A bit of clean-up in sc_z2w().
 v. 1.51.1, 5 October 2015
