--- a/gridgen/CHANGELOG
+++ b/gridgen/CHANGELOG
@@ -1,3 +1,6 @@
+v. 1.51.4, 9 July 2017
+        -- Some minor portability related changes in hash.[ch]
+        -- A minor change in makefile
 v. 1.51.3, 24 November 2016
         -- Some internal changes in hash.c.
 v. 1.51.2, 7 October 2015
